--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "scripts": {
     "dev": "electron-webpack dev",
     "compile": "electron-webpack",
+    "babel": "babel -w src -d lib",
     "dist": "npm run compile && electron-builder",
     "dist:dir": "npm run dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
+    "at-ui": "^1.3.3",
+    "at-ui-style": "^1.5.1",
+    "electron-store": "^1.3.0",
     "source-map-support": "^0.5.6"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.47",
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
+    "@babel/register": "^7.0.0-beta.47",
+    "@vue/babel-preset-app": "^3.0.0-beta.11",
     "electron": "^2.0.1",
     "electron-builder": "^20.13.4",
     "electron-webpack": "^2.1.1",
