--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "electron-auto-setting",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "license": "MIT",
+  "main": "index.js",
   "scripts": {
     "dev": "electron-webpack dev",
     "compile": "electron-webpack",
@@ -15,6 +16,7 @@
     "electron-store": "^1.3.0",
     "source-map-support": "^0.5.6"
   },
+  "files": ["dist", "index.js"],
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.47",
     "@babel/core": "^7.0.0-beta.47",
@@ -30,10 +32,5 @@
   },
   "resolutions": {
     "webpack-sources": "1.0.1"
-  },
-  "electronWebpack": {
-    "renderer": {
-      "webpackConfig": ""
-    }
   }
 }
