--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-auto-setting",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "electron-store": "^1.3.0",
     "source-map-support": "^0.5.6"
   },
-  "files": ["dist", "index.js"],
+  "files": ["dist", "index.js", "screen.png"],
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.47",
     "@babel/core": "^7.0.0-beta.47",
