--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-auto-setting",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "at-ui": "^1.3.3",
     "at-ui-style": "^1.5.1",
     "electron-store": "^1.3.0",
+    "feather-icons": "^4.7.3",
     "source-map-support": "^0.5.6"
   },
   "files": ["dist", "index.js", "screen.png"],
